# qarv

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated.js  class_q_arv_camera-members.html  class_q_arv_camera.html  class_q_arv_camera.js  class_q_arv_camera__coll__graph.dot  class_q_arv_camera__inherit__graph.md5  class_q_arv_camera_delegate-members.html  class_q_arv_camera_delegate.html  class_q_arv_camera_delegate.js  class_q_arv_camera_delegate__inherit__graph.dot  class_q_arv_camera_delegate__inherit__graph.md5  class_q_arv_camera_id-members.html  class_q_arv_camera_id.html  class_q_arv_camera_id.js  class_q_arv_decoder-members.html  class_q_arv_decoder.html  class_q_arv_decoder.js  class_q_arv_gui-members.html  class_q_arv_gui.html  class_q_arv_gui.js  class_q_arv_gui__coll__graph.dot  class_q_arv_gui__coll__graph.md5  class_q_arv_pixel_format-members.html  class_q_arv_pixel_format.html  class_q_arv_pixel_format.js  class_q_arv_recorded_video-members.html  class_q_arv_recorded_video.html  class_q_arv_recorded_video.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_da61e3e9a357748887e3ca8d7c5a0c16.html  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.dot  files.html  files.js  (+99 more)
search/: all_0.js  all_10.js  all_12.js  all_14.js  all_2.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  related_0.js  related_1.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+4 more)
src/: getmtu_linux.h  glhistogramwidget.cpp  globals.cpp  globals.h  glvideowidget.cpp  main.cpp  mainwindow.ui  qarvfeaturetree.cpp  qarvfeaturetree.h  qarvmainwindow.cpp  qarvmainwindow.h  workthread.cpp  workthread.h
src/api/: qarvcamera.cpp  qarvcamera.h  qarvcameradelegate.cpp  qarvcameradelegate.h  qarvdecoder.cpp  qarvdecoder.h  qarvgui.cpp  qarvgui.h  qarvrecordedvideo.cpp  qarvrecordedvideo.h  qarvtype.cpp  qarvtype.h
src/decoders/: bayer.cpp  bayer.h  graymap.cpp  mono12packed.cpp  mono12packed.h  monounpacked.h  monounpackeddecoders.cpp  monounpackeddecoders.h  swscaledecoder.cpp  swscaledecoder.h  unsupported.h
src/decoders/backup/: monounpackeddecoders.cpp  monounpackeddecoders.h
src/decoders/backup/bayer_w_cpp/: bayerbg10.cpp  bayerbg10.h  bayerbg12.cpp  bayerbg12.h  bayerbg12_packed.cpp  bayerbg12_packed.h  bayerbg16.cpp  bayerbg16.h  bayerbg8.cpp  bayerbg8.h  bayergb10.cpp  bayergb10.h  bayergb12.cpp  bayergb12.h  bayergb12_packed.cpp  bayergb12_packed.h  bayergb16.cpp  bayergb16.h  bayergb8.cpp  bayergb8.h  bayergr10.cpp  bayergr10.h  bayergr12.cpp  bayergr12.h  bayergr12_packed.cpp  bayergr12_packed.h  bayergr16.cpp  bayergr16.h  bayergr8.cpp  bayergr8.h  bayerrg10.cpp  bayerrg10.h  bayerrg12.cpp  bayerrg12.h  bayerrg12_packed.cpp  bayerrg12_packed.h  bayerrg16.cpp  bayerrg16.h  bayerrg8.cpp  bayerrg8.h
src/decoders/backup/mono_w_cpp/: mono10.cpp  mono10.h  mono12.cpp  mono12.h  mono14.cpp  mono14.h  mono16.cpp  mono16.h  mono8.cpp  mono8.h  mono8signed.cpp  mono8signed.h
src/decoders/bayer/: bayerbg10.h  bayerbg12.h  bayerbg12_packed.h  bayerbg16.h  bayerbg8.h  bayergb10.h  bayergb12.h  bayergb12_packed.h  bayergb16.h  bayergb8.h  bayergr10.h  bayergr12.h  bayergr12_packed.h  bayergr16.h  bayergr8.h  bayerrg10.h  bayerrg12.h  bayerrg12_packed.h  bayerrg16.h  bayerrg8.h
src/decoders/mono/: mono10.h  mono12.h  mono14.h  mono16.h  mono8.h  mono8signed.h
src/filters/: c41.cpp  c41.h  c41.ui  filter.cpp  filter.h  levels.cpp  levels.h
src/recorders/: gstrecorder_implementation.cpp  gstrecorder_implementation.h  gstrecorders.cpp  gstrecorders.h  imagerecorder.cpp  imagerecorder.h  rawrecorders.cpp  rawrecorders.h  recorder.h
src/recorders/gstrecorders/: Mpeg4Format.json  gstrecorder_implementation.cpp  gstrecorder_implementation.h  gstrecorders.cpp  gstrecorders.h  huffyuvavi.cpp  huffyuvavi.h  mpeg4.cpp  mpeg4.h  x264MkvFormat.json  x264mkv.cpp  x264mkv.h
src/recorders/imagerecorders/: imagerecorder.cpp  imagerecorder.h
src/recorders/rawrecorders/: rawdecoded16.cpp  rawdecoded16.h  rawdecoded8.cpp  rawdecoded8.h  rawundecoded.cpp  rawundecoded.h
src/utils/: qarv_videoplayer.cpp  qarv_videoplayer.h
